--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,15 @@
 #server
 PORT=8080
 
+#jwt
+JWT_SECRET=secret
+JWT_REFRESH_SECRET=refreshsecret
+
+#email
+EMAIL=example@gmail.com
+EMAIL_PASSWORD=aaaa bbbb cccc dddd
+EMAIL_SERVICE=gmail
+
 #database
 DB_HOST=localhost
 DB_USER=root
